--- a/src/plugins/Makefile.am
+++ b/src/plugins/Makefile.am
@@ -4,7 +4,8 @@ AM_LDFLAGS = -avoid-version -module -shared
 pkglib_LTLIBRARIES =    \
     freeimage.la        \
     edges.la            \
-    artistic.la
+    artistic.la         \
+    v4l2.la
 
 freeimage_la_SOURCES = freeimage.c
 freeimage_la_LIBADD = $(FREEIMAGE_LIBS)
@@ -16,3 +17,4 @@ artistic_la_SOURCES = artistic.c
 artistic_la_LIBADD = $(FFTW3_LIBS)
 artistic_la_CFLAGS = $(FFTW3_CFLAGS)
 
+v4l2_la_SOURCES = v4l2.c
