--- a/src/plugins/Makefile.am
+++ b/src/plugins/Makefile.am
@@ -5,7 +5,8 @@ pkglib_LTLIBRARIES =    \
     freeimage.la        \
     edges.la            \
     artistic.la         \
-    v4l2.la
+    v4l2.la             \
+    rbswscale.la
 
 freeimage_la_SOURCES = freeimage.c
 freeimage_la_LIBADD = $(FREEIMAGE_LIBS)
@@ -18,3 +19,7 @@ artistic_la_LIBADD = $(FFTW3_LIBS)
 artistic_la_CFLAGS = $(FFTW3_CFLAGS)
 
 v4l2_la_SOURCES = v4l2.c
+
+rbswscale_la_SOURCES = rbswscale.c
+rbswscale_la_LIBADD = $(libswscale_LIBS) $(libavutil_LIBS) $(libavcodec_LIBS) $(LOOMLIB_LIBS)
+rbswscale_la_CFLAGS = $(libswscale_CFLAGS) $(libavutil_CFLAGS) $(libavcodec_CFLAGS) $(LOOMLIB_CFLAGS)
