New branch for testing the simple_output plugin.
This plugin will output resulting images to a single file specified on the
command line. This will be preferable for cases where only one file is being
processed.

--- a/src/plugins/Makefile.am
+++ b/src/plugins/Makefile.am
@@ -4,7 +4,8 @@ AM_LDFLAGS = -avoid-version -module -shared
 pkglib_LTLIBRARIES =    \
     freeimage.la        \
     edges.la            \
-    artistic.la
+    artistic.la         \
+    simple_output.la
 
 freeimage_la_SOURCES = freeimage.c
 freeimage_la_LIBADD = $(FREEIMAGE_LIBS)
@@ -16,3 +17,4 @@ artistic_la_SOURCES = artistic.c
 artistic_la_LIBADD = $(FFTW3_LIBS)
 artistic_la_CFLAGS = $(FFTW3_CFLAGS)
 
+simple_output_la_SOURCES = simple_output.c
