--- a/src/plugins/Makefile.am
+++ b/src/plugins/Makefile.am
@@ -1,28 +1,40 @@
 AM_CPPFLAGS = -I$(top_srcdir)/src
 AM_LDFLAGS = -avoid-version -module -shared
 
-pkglib_LTLIBRARIES =    \
-    freeimage.la        \
-    edges.la            \
-    artistic.la         \
-    v4l2.la             \
-    swscale.la          \
-    simpleio.la
+pkglib_LTLIBRARIES = 
 
-freeimage_la_SOURCES = freeimage.c
-freeimage_la_LIBADD = $(FREEIMAGE_LIBS)
-
-edges_la_SOURCES = edges.c
-edges_la_LIBADD = $(M_LIBS)
-
+if BUILD_ARTISTIC
+pkglib_LTLIBRARIES += artistic.la
 artistic_la_SOURCES = artistic.c
-artistic_la_LIBADD = $(FFTW3_LIBS)
-artistic_la_CFLAGS = $(FFTW3_CFLAGS)
+artistic_la_LIBADD = $(ARTISTIC_LIBADD)
+artistic_la_CFLAGS = $(ARTISTIC_CFLAGS)
+endif
 
-v4l2_la_SOURCES = v4l2.c
+if BUILD_EDGES
+pkglib_LTLIBRARIES += edges.la
+edges_la_SOURCES = edges.c
+edges_la_LIBADD = $(EDGES_LIBADD)
+endif
 
-swscale_la_SOURCES = swscale.c
-swscale_la_LIBADD = $(libswscale_LIBS) $(libavutil_LIBS) $(libavcodec_LIBS) $(LOOMLIB_LIBS)
-swscale_la_CFLAGS = $(libswscale_CFLAGS) $(libavutil_CFLAGS) $(libavcodec_CFLAGS) $(LOOMLIB_CFLAGS)
+if BUILD_FREEIMAGE
+pkglib_LTLIBRARIES += freeimage.la
+freeimage_la_SOURCES = freeimage.c
+freeimage_la_LIBADD = $(FREEIMAGE_LIBADD)
+endif
 
+if BUILD_SIMPLEIO
+pkglib_LTLIBRARIES += simpleio.la
 simpleio_la_SOURCES= simpleio.c
+endif
+
+if BUILD_SWSCALE
+pkglib_LTLIBRARIES += swscale.la
+swscale_la_SOURCES = swscale.c
+swscale_la_LIBADD = $(SWSCALE_LIBADD)
+swscale_la_CFLAGS = $(SWSCALE_CFLAGS)
+endif
+
+if BUILD_V4L2
+pkglib_LTLIBRARIES += v4l2.la
+v4l2_la_SOURCES = v4l2.c
+endif
