conf: setup ltdl correctly on OSX

--- a/configure.ac
+++ b/configure.ac
@@ -19,7 +19,10 @@ AC_PROG_LN_S
 AC_PROG_MAKE_SET
 AC_CANONICAL_HOST
 AC_CANONICAL_BUILD
+AM_PROG_AR
 AC_PROG_LIBTOOL
+LT_CONFIG_LTDL_DIR([libltdl])
+LTDL_INIT
 
 # Checks for headers/libraries used in the core.
 ACX_PTHREAD([AC_SUBST([CC], ["${PTHREAD_CC}"])],
